--- a/controles.html
+++ b/controles.html
@@ -15,7 +15,7 @@
         <a href="index.html">Inicio</a>
         <a href="recuperar.html">Recuperar</a>
         <a href="registrarse.html">Registrarse</a>
-        <a href="controles.html">Controles HTML5</a>
+        <a href="controles.html">Controles</a>
     </nav>
     
     <main>
