--- a/controles.html
+++ b/controles.html
@@ -30,7 +30,7 @@
             <input type="text" id="apellido" name="apellido" required>
             
             <label for="telefono">Teléfono:</label>
-            <input type="tel" id="telefono" name="telefono" placeholder="1234-5678">
+            <input type="tel" id="telefono" name="telefono" placeholder="12345678">
             
             <label for="fecha-nacimiento">Fecha de Nacimiento:</label>
             <input type="date" id="fecha-nacimiento" name="fecha-nacimiento">
